# CQD_SS26_solutions

./: LICENSE  README.md  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: python_CI.yml
Comp_Quant_Dynam/: __init__.py  hamiltonians.py  plotting.py  unitaries.py  utility.py
Notebooks/: exercise1.ipynb  exercise3.ipynb  python_tutorial_1.ipynb
tests/: exercise_sheets_test.py  utility_test.py
