[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Comp_Quant_Dynam"
version = "0.0.1"
description = "Code repository with sample solutions for the Computational Quantum Dynamics course by Prof. Gärttner (SS26, Jena)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "IPython",
    "ipywidgets",
    "notebook<7",
    "jupyter_contrib_nbextensions",
    "qutip",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "nbconvert",   
]

[tool.setuptools]
packages = ["Comp_Quant_Dynam"]


[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/Comp_Quant_Dynam/__init__.py",
    ]
